<resources>
    <string name="app_name">G7</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_event_select">EventSelect</string>
    <string name="login">Login</string>
    <string name="username">Usuario:</string>
    <string name="pass">Contraseña:</string>
    <string name="init">Iniciar</string>
    <string name="terminate">Finalizar</string>
    <string name="title_activity_escanner">Escanner</string>
    <string name="scan">Escaneando carnets (coming soon)</string>
    <string name="manual">Ingreso manual</string>
    <string name="carnet">Carnet:</string>
    <string name="enviar">Enviar asistencia</string>
    <string name="cancel">Cancelar</string>
</resources>
