<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.analisis.grupo7.g7.Escanner">

    <TextView android:text="@string/scan" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aux_label" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminate"
        android:id="@+id/terminateB"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="open"
        android:layout_alignEnd="@+id/aux_label"
        android:layout_alignTop="@+id/ingresoManualB" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual"
        android:id="@+id/ingresoManualB"
        android:onClick="ingresoManual"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/terminateB" />

</RelativeLayout>
