<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <TextView android:text="@string/login" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_label"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:paddingBottom="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/username"
        android:id="@+id/textView"
        android:layout_below="@+id/login_label"
        android:layout_alignParentStart="true"
        android:paddingTop="19sp"
        android:paddingRight="5sp"
        android:paddingLeft="0sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/pass"
        android:id="@+id/textView2"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:paddingTop="19sp"
        android:paddingRight="5sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:layout_alignEnd="@+id/username"
        android:layout_toEndOf="@+id/textView2" />

</RelativeLayout>
